# logic

./: .dockerignore  .gitignore  Cargo.toml  ConnectionMethod.md  DOCKER.md  Dockerfile  app.sh  cadical.md  docker-compose.yml  examples.json  nested-boxes-auto-draw.jsx
benchmarks/: rast-p11.k10.cnf  rast-p11.k20.cnf  rast-p11.k6.cnf  rast-p11.k7.cnf
benchmarks/php/: php-12-11.cnf  php-14-13.cnf
doc/: ConnectionMethod.md  cdlc.md  challgenges.md  competition-benchmark_600.md  competition-benchmark_600_eff.md  competition-benchmark_600_eff_2.md  competition-benchmark_600_greedy_cdcl.md  competition-benchmark_600_greedy_eff.md  competition-benchmark_600_greedy_eff_2.md  competition-benchmarks-plot.py  competition-benchmarks.md  competition-benchmarks.sh  dual-search-design-prompt.md  dual-search-design.md  effective-path-count-strategy-prompt.md  greedy_cover.md  lazy-dfs.md  preprocess.md  strategic_cover.md
lib/: adder.jq  at_most.jq  bmc.jq  expr.jq  math.jq  waerden.jq
nested-boxes/: README.md  formula.jsx  index.html  main.jsx  nested-boxes.jsx  package.json  vite.config.js
src/: cadical.rs  formula.rs  lib.rs  main.rs  matrix.rs  nnf_arena.rs  preprocess.rs  prove.rs  simplify.rs
src/controller/: backtrack.rs  cancel.rs  cdcl.rs  mod.rs  smart.rs
src/dual/: bench.rs  cover_basic.rs  cover_bdd_bans.rs  cover_cnf_bans.rs  cover_greedy.rs  cover_greedy_dynamic.rs  cover_state_bdd.rs  cover_state_cnf.rs  effective_count.rs  flat.rs  mod.rs  path_basic.rs  path_cdcl.rs  path_effective.rs  path_smart.rs  wrapper.rs
