[package]
name = "logic"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
xq          = "0.5"
xq-lang     = "0.0.1"
cadical     = "0.1"
